tests/snapshots/snapshot__type_errors@multi_byte_utf8.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/multi_byte_utf8.roto
---
Error: Type error: cannot find value `bar` in this scope
   ╭─[ tests/scripts/type_errors/multi_byte_utf8.roto:4:5 ]
   │
 4 │     bar();
   │     ─┬─  
   │      ╰─── not found in this scope
───╯
